# vessel

./: .gitignore  .travis.yml  CONTRIBUTING.md  ChangeLog.md  LICENSE  README.md  default.nix  release.nix  shell.nix  vessel.cabal
.github/workflows/: haskell.yml
reflex-platform/: github.json
src/: Tutorial.hs
src/Data/: TSum.hs  Vessel.hs
src/Data/Vessel/: Class.hs  DependentMap.hs  Disperse.hs  Identity.hs  Internal.hs  Map.hs  Orphans.hs  Path.hs  Selectable.hs  Single.hs  SubVessel.hs  Vessel.hs  ViewMorphism.hs  Void.hs
src/Data/Vessel/ViewMorphism/: Cartesian.hs  Debug.hs
tutorial/: Tutorial.hs  Tutorial.md
