name:                vessel
version:             0.1.0.0
description:         A dependently-typed key-value data structure that allows for storage of both "queries", (wherein keys are stored along with reasons for selecting the items or counts of the number of times something has been selected), as well as the responses to those queries, in which the type of the key additionally determines the type of the response

license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           Obsidian Systems LLC
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Vessel
                     , Data.TSum
  other-extensions:    FlexibleInstances, GeneralizedNewtypeDeriving, RankNTypes, ScopedTypeVariables, StandaloneDeriving, TypeFamilies, UndecidableInstances
  build-depends:       base >=4.9 && <4.12
                     , aeson
                     , bifunctors
                     , constraints
                     , constraints-extras
                     , dependent-monoidal-map
                     , dependent-sum
                     , dependent-sum-aeson-orphans
                     , reflex
                     , these
  hs-source-dirs:      src
  default-language:    Haskell2010
