name:                vessel
version:             0.1.0.0
description:         A dependently-typed key-value data structure that allows for storage of both "queries", (wherein keys are stored along with reasons for selecting the items or counts of the number of times something has been selected), as well as the responses to those queries, in which the type of the key additionally determines the type of the response

license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           Obsidian Systems LLC
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
category:            Data
synopsis:            Functor-paramteric containers
tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5


library
  exposed-modules:     Data.Vessel
  other-extensions:    FlexibleInstances, GeneralizedNewtypeDeriving, RankNTypes, ScopedTypeVariables, StandaloneDeriving, TypeFamilies, UndecidableInstances
  build-depends:       base >=4.9 && <4.12
                     , aeson
                     , bifunctors
                     , containers
                     , constraints
                     , constraints-extras
                     , dependent-map
                     , dependent-monoidal-map
                     , dependent-sum
                     , dependent-sum-aeson-orphans
                     , monoidal-containers
                     , mtl
                     , reflex >= 0.6
                     , these
                     , QuickCheck
                     , witherable >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/obsidiansystems/vessel
