name:                vessel
version:             0.1.1.0
description:         A dependently-typed key-value data structure that allows for storage of both "queries", (wherein keys are stored along with reasons for selecting the items or counts of the number of times something has been selected), as well as the responses to those queries, in which the type of the key additionally determines the type of the response

license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           Obsidian Systems LLC
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
category:            Data
synopsis:            Functor-parametric containers
tested-with:
  GHC  ==8.2.2 || ==8.4.4 || ==8.6.5


library
  exposed-modules:     Data.Vessel
                     , Data.Vessel.Map
                     , Data.Vessel.Internal
                     , Data.Vessel.Selectable
                     , Data.Vessel.Class
                     , Data.Vessel.Identity
                     , Data.Vessel.Vessel
                     , Data.Vessel.DependentMap
                     , Data.Vessel.SubVessel
                     , Data.Vessel.Single
                     , Data.Vessel.Disperse
                     , Data.Vessel.ViewMorphism

  other-extensions:    FlexibleInstances, GeneralizedNewtypeDeriving, RankNTypes, ScopedTypeVariables, StandaloneDeriving, TypeFamilies, UndecidableInstances
  build-depends:       base >=4.9 && <4.13
                     , aeson >= 1.4 && < 1.5
                     , bifunctors >= 5.5 && < 5.6
                     , containers >= 0.6 && < 0.7
                     , constraints >= 0.10 && < 0.11
                     , constraints-extras >= 0.3 && < 0.4
                     , dependent-map >= 0.3 && < 0.4
                     , dependent-monoidal-map >= 0.1.1.0 && < 0.2
                     , dependent-sum >= 0.6 && < 0.7
                     , dependent-sum-aeson-orphans >= 0.2.1 && < 0.3
                     , monoidal-containers >= 0.6 && < 0.7
                     , mtl >= 2.2 && < 2.3
                     , reflex >= 0.6.2.4 && < 0.7
                     , semialign >= 1
                     , these >= 1 && < 1.1
                     , QuickCheck >= 2.12 && < 2.14
                     , witherable >= 0.2 && <= 0.3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

library tutorial
  hs-source-dirs:      tutorial
  exposed-modules:     Tutorial
  default-language:    Haskell2010
  other-extensions:    FlexibleInstances, GeneralizedNewtypeDeriving, RankNTypes, ScopedTypeVariables, StandaloneDeriving, TypeFamilies, UndecidableInstances
  build-depends:       base >=4.9 && <4.13
                     , vessel
                     , aeson
                     , aeson-gadt-th
                     , containers
                     , constraints
                     , constraints-extras
                     , dependent-map
                     , dependent-sum
                     , dependent-sum-template
                     , dependent-sum-aeson-orphans
                     , dependent-monoidal-map
                     , lens
                     , monoidal-containers
                     , mtl
                     , reflex
                     , reflex-dom-core
                     , semialign
                     , text
                     , these
                     , witherable


source-repository head
  type: git
  location: https://github.com/obsidiansystems/vessel
